--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,13 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".", // Ensures paths are relative to the project root
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@Fonts/*": ["./assets/fonts/*"],
+      "@Assets/*": ["./assets/images/*"],
+      "@Components/*": ["./components/*"],
+      "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx"]
 }
