--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "victory-native": "^37.0.3-next.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
