--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-web": "~0.19.10",
     "tinycolor2": "^1.6.0",
     "victory-native": "^37.0.3-next.0",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
