--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -62,5 +62,9 @@ if (getRNMinorVersion() < 75) {
   applyNativeModulesSettingsGradle(settings)
 }
 
+rootProject.name = 'YourProjectName'
+
 include ':app'
+include ':background_fetch'
+project(':background_fetch').projectDir = new File(rootProject.projectDir, '../node_modules/@transistorsoft/tsbackgroundfetch/android')
 includeBuild(new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim()).getParentFile())
