--- a/package.json
+++ b/package.json
@@ -21,21 +21,25 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
     "expo-image-picker": "^15.0.7",
-    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-background-fetch": "^4.2.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -45,13 +49,13 @@
     "react-native-web": "~0.19.10",
     "tinycolor2": "^1.6.0",
     "victory-native": "^37.0.3-next.0",
-    "zustand": "^5.0.0",
-    "expo-av": "~14.0.7"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.7",
     "@types/tinycolor2": "^1.4.6",
     "babel-plugin-module-resolver": "^5.0.2",
